--- a/.github/workflows/Artifacts_Clean.yml
+++ b/.github/workflows/Artifacts_Clean.yml
@@ -18,7 +18,9 @@ jobs:
         node-version: '20'
 
     - name: Install dependencies
-      run: npm install axios
+      run: |
+        npm install axios
+        npm install luxon
 
     - name: Cleanup old artifacts
       env:
